--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
+  directory = 'functions'
 
 [[redirects]]
   force = true
   from = "/*"
   status = 200
-  to = "/functions/:splat"
+  to = "/:splat"
