--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,6 @@
 
 [[redirects]]
   force = true
-  from = "/*"
+  from = "/api/*"
   status = 200
-  to = "/.netlify/functions/index/:splat"
+  to = "/.netlify/functions/api/:splat"
